# rime

./: .dockerignore  .gitignore  CODE_REVIEW.md  Cargo.toml  Dockerfile  Makefile  README.md  SETUP.md  THREAT_MODEL.md  docker-compose.yml
.github/workflows/: ci.yml
frontend/: next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: approval-card.tsx  audit-log.tsx  bezel.tsx  ceremony-panel.tsx  ceremony-strip.tsx  confirm-dialog.tsx  conn-dot.tsx  dashboard.tsx  device-view.tsx  header-bar.tsx  island-button.tsx  new-request.tsx  quorum-meter.tsx  recovery-panel.tsx  request-feed.tsx  rime-styles.tsx  route-lines.tsx  section-label.tsx  signer-avatar.tsx  signer-identity.ts  signer-phone.tsx  status-chip.tsx  step-cascade.tsx  tick-icons.tsx  treasury-card.tsx
frontend/src/hooks/: use-rime-state.ts
frontend/src/lib/: api.ts  rime.ts  types.ts
rime-repair/: Cargo.toml
rime-repair/src/: main.rs
rime-server/: Cargo.toml  config.example.toml
rime-server/src/: balance.rs  config.rs  main.rs  notify.rs  pipeline.rs  recovery.rs  schema.sql
rime-signer/: Cargo.toml
rime-signer/src/: main.rs
scripts/: 00_env.sh  05_frostd_tls.sh  10_keygen.sh  20_address.sh  30_wallet_init.sh  40_propose.sh  50_sign.sh  55_ceremony.sh  60_prove_send.sh  70_mine_testnet.sh  bringup.sh
web/: app.js  index.html  style.css
