[package]
name = "rime-repair"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
# Pinned to the exact revision frost-tools uses, for share-format compat.
# (registry reddsa 0.5.1 is an older line built on frost-core 0.6.)
frost-core = "=2.2.0"
reddsa = { git = "https://github.com/ZcashFoundation/reddsa.git", rev = "ed49e9ca0699a6450f6d4a9fe62ff168f5ea1ead", features = ["frost"] }
hex = "0.4"
toml = "0.8"
rand = "0.8"
