[package]
name = "rime-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
tower-http = { version = "0.6", features = ["fs"] }
toml = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
